--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
 
     <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
