--- a/index.html
+++ b/index.html
@@ -19,12 +19,41 @@
     <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
   </head>
   <body>
-    “ I’ve been interested in coding for a while but never taken the jump, until
-    now. I couldn’t recommend this course enough. I’m now in the job of my
-    dreams and so excited about the future. ” Tanya Sinclair UX Engineer “ If
-    you want to lay the best foundation possible I’d recommend taking this
-    course. The depth the instructors go into is incredible. I now feel so
-    confident about starting up as a professional developer. ” John Tarkpor
-    Junior Front-end Developer
+    <div class="testimonial-wrapper">
+      <div class="testimonial-1">
+        <p class="quote">
+          “ I’ve been interested in coding for a while but never taken the jump,
+          until now. I couldn’t recommend this course enough. I’m now in the job
+          of my dreams and so excited about the future. ”
+        </p>
+        <p class="name">Tanya Sinclair</p>
+        <p class="role">UX Engineer</p>
+      </div>
+      <div class="testimonial-2">
+        <p class="quote">
+          “ If you want to lay the best foundation possible I’d recommend taking
+          this course. The depth the instructors go into is incredible. I now
+          feel so confident about starting up as a professional developer. ”
+        </p>
+        <p class="name">John Tarkpor</p>
+        <p class="role">Junior Front-end Developer</p>
+      </div>
+    </div>
+    <div class="image-wrapper">
+      <div class="image-frame">
+        <div class="image-slide">
+          <div class="image-1">
+            <img src="./images/image-tanya.jpg" alt="" />
+          </div>
+          <div class="image-2">
+            <img src="./images/image-john.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="image-controls">
+        <img id="btn_prev" src="./images/icon-prev.svg" alt="" />
+        <img id="btn_next" src="./images/icon-next.svg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
